--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 
 <body>
+    <div id="logindiv">
+        <select id="lang">
+            <option value="en">English</option>
+            <option value="es">Spanish</option>
+        </select>
+        <input type="button" value="Login" id="login">
+    </div>
+    <h1 id="greeting"></h1>
+
     <script src="jquery-3.3.1.js"></script>
     <script src="greetr.js"></script>
     <script src="app.js"></script>
